Added external Javascript files.
The HTML pages now references the external Javascript files.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,7 @@
         <br/><br/>
 
         <!--Change picture on index page by hovering over it with the mouse-->
-        <script>
-            function one() {
-                document.getElementById("picture").src = "images/cheers.jpg";
-            }
-
-            function two() {
-                document.getElementById("picture").src = "images/beer.jpg";
-            }
-        </script>
+        <script src="swap.js"></script>
         
         <div>My top 3 beer brands are:</div>
         <ol>
